api is set. crud for portfolio is set. img upload is set

--- a/src/server/views/newPortfolio.ejs
+++ b/src/server/views/newPortfolio.ejs
@@ -12,7 +12,7 @@
         <div class="ui grid">
             <div class="row">
                 <div class="column">
-                    <form action="/portfolios" method="POST" class="ui form">
+                    <form action="/admin/portfolios" enctype="multipart/form-data" method="POST" class="ui form">
                         <div class="field">
                             <label>Label</label>
                             <input type="text" name="label" placeholder="label" />
