--- a/src/server/views/admin.ejs
+++ b/src/server/views/admin.ejs
@@ -4,41 +4,49 @@
 <head>
     <%- include('_layouts/head'); %>
         <link rel="stylesheet" href="../css/card.min.css" />
+        <link rel="stylesheet" href="../css/grid.min.css" />
+        <link rel="stylesheet" href="../css/button.min.css" />
 </head>
 
 <body>
-    <a href="/admin/newPortfolio">New portfolio</a>
-    <%if(portfolios){ portfolios.forEach(portfolio=>{%>
+    <a href="/admin/newPortfolio" class="ui secondary button">
+      New Portfolio
+    </a>
+    <div class="ui grid">
+        <%if(portfolios){ portfolios.forEach(portfolio=>{%>
+            <div class="four wide column">
+                <div class="ui card">
+                    <div class="image">
+                        <img src="img/<%= portfolio.image %>" />
+                    </div>
+                    <div class="content">
+                        <a href="<%= 'portfolios/edit/'+portfolio.id%>" class="header">
+                            <%= portfolio.label%>
+                        </a>
+                        <div class="description">
+                            <%- portfolio.text%>
+                        </div>
+                        <a href="portfolios/delete/<%=portfolio.id%>">delete</a>
+                    </div>
+                </div>
+            </div>
+            <%})}%>
+    </div>
+    <%if(pages){ pages.forEach(page=>{%>
         <div class="ui card">
             <div class="image">
-                <img src="<%= portfolio.img%>" />
+                <img src="<%= page.img%>" />
             </div>
             <div class="content">
-                <a href="<%= 'portfolios/edit/'+portfolio.id%>" class="header">
-                    <%= portfolio.label%>
+                <a href="<%= 'baseUrl/pages/'+page.id%>" class="header">
+                    <%= page.label%>
                 </a>
                 <div class="description">
-                    <%- portfolio.text%>
+                    <%= page.text%>
                 </div>
-                <a href="portfolios/delete/<%=portfolio.id%>">delete</a>
             </div>
         </div>
         <%})}%>
-            <%if(pages){ pages.forEach(page=>{%>
-                <div class="ui card">
-                    <div class="image">
-                        <img src="<%= page.img%>" />
-                    </div>
-                    <div class="content">
-                        <a href="<%= 'baseUrl/pages/'+page.id%>" class="header">
-                            <%= page.label%>
-                        </a>
-                        <div class="description">
-                            <%= page.text%>
-                        </div>
-                    </div>
-                </div>
-                <%})}%>
 </body>
 
 </html>
