--- a/src/server/views/editPortfolio.ejs
+++ b/src/server/views/editPortfolio.ejs
@@ -12,7 +12,7 @@
         <div class="ui grid">
             <div class="row">
                 <div class="column">
-                    <form action="/admin/portfolios/edit/<%= portfolio.id%>" method="POST" class="ui form">
+                    <form action="/admin/portfolios/edit/<%= portfolio.id%>" enctype="multipart/form-data" method="POST" class="ui form">
                         <div class="field">
                             <label>Label</label>
                             <input type="text" name="label" placeholder="label" value="<%= portfolio.label%>" />
