--- a/src/server/views/editPortfolio.ejs
+++ b/src/server/views/editPortfolio.ejs
@@ -31,15 +31,6 @@
         </div>
       </div>
     </div>
-    <script src="https://cdn.ckeditor.com/ckeditor5/18.0.0/classic/ckeditor.js"></script>
-    <script>
-      ClassicEditor.create(document.querySelector("#editor"))
-        .then((editor) => {
-          console.log(editor);
-        })
-        .catch((error) => {
-          console.error(error);
-        });
-    </script>
+   <%- include('_layouts/ckeditor'); %>
   </body>
 </html>
