--- a/src/server/views/newPage.ejs
+++ b/src/server/views/newPage.ejs
@@ -21,22 +21,17 @@
                             <label>Icon</label>
                             <input type="file" name="image" placeholder="Image" />
                         </div>
+                        <div class="field">
+                            <label>Icon</label>
+                            <textarea name="text" id="editor" cols="30" rows="10"></textarea>
+                        </div>
                         <button class="ui button" type="submit">Submit</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-    <script src="https://cdn.ckeditor.com/ckeditor5/18.0.0/classic/ckeditor.js"></script>
-    <script>
-        ClassicEditor.create(document.querySelector("#editor"))
-            .then((editor) => {
-                console.log(editor);
-            })
-            .catch((error) => {
-                console.error(error);
-            });
-    </script>
+    <%- include('_layouts/ckeditor'); %>
 </body>
 
 </html>
